--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,9 @@
   --light-grey: hsl(217, 12%, 63%);
   --medium-grey: hsl(216, 12%, 54%);
   --dark-blue: hsl(213, 19%, 18%);
+  --medium-dark: hsl(215, 27%, 12%);
   --very-dark-blue: hsl(216, 12%, 8%);
+
 }
 
 * {
