--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -63,6 +63,19 @@
 
 .card__container_ratings_number_isactive{
     background: var(--light-grey);
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+.card__container_ratings_number_isactive:hover{
+    background: var(--orange-color);
+    color: var(--white-color);
+    cursor: pointer;
 }
 
 button{
