--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -27,6 +27,7 @@
 
 .card__container p{
     color: var(--light-grey);
+    font-size: 0.9rem;
 }
 
 .card__container img{
@@ -53,6 +54,8 @@
     justify-content: center;
     align-items: center;
     align-content: center;
+    color: var(--light-grey);
+    font-size: 0.8rem;
 }
 
 .card__container_ratings_number:hover{
@@ -70,6 +73,8 @@
     justify-content: center;
     align-items: center;
     align-content: center;
+    font-size: 0.8rem;
+    color: var(--white-color);
 }
 
 .card__container_ratings_number_isactive:hover{
@@ -99,3 +104,13 @@ button:hover{
 .card__container a{
     width: 100%;
 }
+
+@media screen and (max-width: 500px) {
+    .container{
+        padding: 0 1.5rem;
+    }
+    .card__container{
+        width: 100%;
+      }
+
+  }
